fix(css): adjust float and clear for alignment classes
Updated CSS rules to properly handle alignment by adding `clear: left` for elements floating left and `clear: right` for elements floating right. Also corrected `.mw-default-size` to float right instead of left. These changes aim to improve layout consistency and avoid potential overlapping issues.

--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -329,6 +329,7 @@ figcaption,
 .mw-halign-left,
 .tleft {
     float: left;
+    clear: left;
     margin-right: 1em;
 }
 
@@ -342,13 +343,14 @@ figcaption,
 .mw-halign-right,
 .tright {
     float: right;
+    clear: right;
     margin-left: 1em;
 }
 
 .mw-default-size {
     width: fit-content;
-    float: left;
-    clear: left;
+    float: right;
+    clear: right;
     max-width: 300px;
 }
 
